# service-rate

./: .envrc  .flake8  .gitignore  Makefile  README.md  _exp.py  bucket_conf.py  bucket_utils.py  csv_utils.py  debug_utils.py  exp.py  exp_w_schedule.py  install.sh  plot_polygon.py  plot_utils.py  pyproject.toml  requirements.txt  run.sh  run_exp.sh  run_tests.sh  service_rate.py  service_rate_utils.py  srun.sh  storage.py  storage_scheme.py  venv.sh
csv/: SIMRESULT_SERVICE_RATE_CODING_PLACE_DEMAND.csv  SIMRESULT_SERVICE_RATE_CODING_PLACE_DEMAND_ORBIT.csv  SIMRESULT_SERVICE_RATE_CODING_PLACE_DEMAND_result.csv  SIMRESULT_SERVICE_RATE_CODING_PLACE_PLACEMENT.csv  SIMRESULT_SERVICE_RATE_REPLICATION_PLACE_DEMAND.csv  SIMRESULT_SERVICE_RATE_REPLICATION_PLACE_DEMAND_ORBIT.csv  SIMRESULT_SERVICE_RATE_REPLICATION_PLACE_DEMAND_result.csv  exp1_rep_12nodes_demand.csv  exp1_rep_12nodes_placement.csv  exp2_ec_9nodes_demand_result.csv  exp2_ec_9nodes_placement.csv  exp3_6nodes_demand.csv  exp3_ec_6nodes_placement.csv  exp3_rep_6nodes_placement.csv  experiment_output.csv
exp/: exp_mm1_stability.py  exp_single_obj_per_node.py
exp/allocation_w_complexes/: exp_prob_span_of_every_t_complexes_geq_u.py
exp/model/: exp_random_design.py
exp/random_allocations/: exp_prob_max_num_balls_leq_u.py
exp/service_rate/: exp_cap_region_vs_field_size.py  exp_incremental_storage_construction.py  exp_plot_capacity_region.py
exp/sim/: exp_mm1_stability.py
exp/storage_opt/: data.py  exp_single_obj_per_node.py
exp/storage_overlap/: _exp_impact_of_d.py  deprecated.py  exp_cap_region.py  exp_cyclic_design_w_general_demand_distribution.py  exp_design.py  exp_design_w_arbitrary_ro.py  exp_design_w_general_demand_distribution.py  exp_designs_w_tractable_demand.py  exp_impact_of_b.py  exp_impact_of_d.py  exp_impact_of_d_for_clustering.py  (+11 more)
log/: .gitignore
notes/: meeting_1
src/: csv_utils.py  debug_utils.py  demand_utils.py  plot_capacity_region.py  plot_cost.py  plot_polygon.py  plot_polygon_utils.py  plot_utils.py  service_rate.py  service_rate_utils.py  storage_finder.py  storage_scheme.py
tests/: conftest.py  node_id_objs_list.py  node_id_to_objs.py  test_integrality_theorem.py  test_load_across_nodes.py  test_plot_capacity_region.py  test_plot_cost.py  test_popularity.py  test_service_rate_inspector.py  test_service_rate_inspector_on_redundancy_w_two_xors.py  test_service_rate_inspector_w_csv.py  test_sim_mm1.py  test_single_obj_per_node_optimizer.py  test_storage_design.py  test_storage_finder.py  test_storage_optimizer.py
(+83 files in other folders)
