[tool.poetry]
name = "service-rate"
version = "0.1.0"
description = ""
authors = ["Mehmet Aktas <mehmet@overjet.ai>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
matplotlib = "^3.5.1"
networkx = "^2.8"
numpy = "^1.22.3"
scipy = "^1.8.0"
sympy = "^1.10.1"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
