[tool.poetry]
name = "service-rate"
version = "0.1.0"
description = ""
authors = ["Mehmet Aktas <mehmet@overjet.ai>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
matplotlib = "^3.5.1"
networkx = "^2.8"
numpy = "^1.22.3"
scipy = "^1.8.0"
sympy = "^1.10.1"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"
cvxpy = "^1.2.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.1"
log_cli = "true"
log_cli_level = "INFO"
## Note (mehmet@overjet.ai): This will allow pytest to print out all the
## logging output to cli.
# log_cli_level = "NOTSET"
# log_cli_format = "%(levelname)s:%(filename)s:%(lineno)s-%(funcName)s: %(message)s"
addopts = "--cov"
testpaths = [
    "tests",
]
