[tool.poetry]
name = "service-rate"
version = "0.1.0"
description = ""
authors = ["Mehmet Aktas <mehmet@overjet.ai>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
matplotlib = "^3.5.1"
networkx = "^2.8"
numpy = "^1.22.3"
scipy = "^1.8.0"
sympy = "^1.10.1"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"
cvxpy = {extras = ["glpk"], version = "^1.3.0"}
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pandas = "^1.4.2"
joblib = "^1.1.0"
cvxopt = "^1.3.0"
simpy = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.1"
# addopts = "--cov --show-capture=stderr"
## Print only stdout.
# addopts = "-rP -p no:logging"
# log_cli_level = "DEBUG"
## Print only logs.
# addopts = "--capture=no"
log_cli = true
log_cli_level = "DEBUG"
## Note (mehmet@overjet.ai): This will allow pytest to print out all the
## logging output to cli.
# log_cli_level = "NOTSET"
# log_cli_format = "%(levelname)s:%(filename)s:%(lineno)s-%(funcName)s: %(message)s"
testpaths = [
    "tests",
]
